@@ -1,5 +1,10 @@
 2008-02-05  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextEditor.cs: Changed bracket highlighting in selected
+	  regions.
+
+2008-02-05  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/TextEditor.cs: Fixed click on invalid line bug.
 
 2008-02-04  Mike Krüger <mkrueger@novell.com> 
